--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -46,7 +46,7 @@
         <div class="place-self-center mr-auto lg:col-span-7">
 
 
-            <h1 class="mb-4 max-w-2xl text-6xl font-extrabold leading-none md:text-7xl xl:text-8xl dark:text-white">Technology Applied in Agriculture.</h1>
+            <h1 class="mb-4 max-w-2xl text-6xl font-extrabold leading-none md:text-7xl xl:text-8xl dark:text-white">Advanced Technology Applied in Agriculture.</h1>
             <p class="mb-6 max-w-2xl font-light text-gray-500 lg:mb-8 md:text-lg lg:text-xl dark:text-gray-400">From checkout to global sales tax compliance, companies around the world use our software to simplify their payment stack.</p>
 
 
